some issue fixed while query